# AG1_AEtherBus

./: .gitignore  ATTENTION.md  ATTENTION_COMMENTS.md  README.md  ReadMeV1_1.md  package-lock.json  pyproject.toml  requirements.txt
AG1_AetherBus/: Agent.md  ReadMe.md  Readmev0.md  TODO.md  TODONB.md  a2a_edge_handler.py  a2a_edge_handlerV0.py  aetherdeck_relay_handler.py  agent_bus.py  agent_bus_minimal.py  agent_registry.py  bus.py  bus_adapter.py  bus_adapterV2.py  bus_cli_prompted.py  bus_connector.py  bus_tui.py  envelope.py  keys.py  mcp_bridge.py  mcp_tool_manager.py  mcp_tool_managerv0.py  relay_server.py  rpc.py  sse_bridge_mcp.py  tail.py  test_bridge_config.json  tg_edge_handler.py  utils.py
AG1_AetherBus/Beta/: busV0.py  busv1_issue.py  rpcv1_issue.py
AG1_AetherBus/docs/: AetherDeckRelay.md  AetherDeck_UI_Directive.md  GSMASH_Intro_Integration.md  MCPServerDiscovery.md  STREAM_KEYS.md
AG1_AetherBus/endpointtests/: bus_adapter_test.py  mcp_bridge_gem_test.py  mcp_bridge_nteractive_test.py  test_ans_send.py  test_llm.py  test_mcp_fda.py  test_mcp_gem.py  test_simple_mcp.py
AG1_AetherBus/handlers/: aetherdeck_relay_handler.py  aetherdeck_relay_handlerV1.py  http_routes.py  llm_edge_handler.py  mcp_bridge_gem.py  mcp_tool_manager.py  nostr_edge_handler.py  registrations.py  server.py  tg_edge_handler.py  ufetch_ASIOne_Client_Agent.py  ufetch_asi_edge_handler.py  websocket.py
AG1_AetherBus/handlers/mail_edge/: mail_edge_handler.py
AG1_AetherBus/test_configs/: llm_azure.yaml
docs/: READMEV1a.md  README_1stuse.md  README_AGENT_REGISTRY.md  README_LLM_EDGE.md  README_MAIL_EDGE.md  README_NOSTR_EDGE.md  README_TG_EDGE.md  README_advanced.md  README_encryption.md  README_execute.md
examples/: llm_edge_config.yaml  mail_edge_config.json  nostr_edge_config.json
feature/experimental_attestation/: README.md  attestation_node.py  crypto_utils.py  ledger.py
tests/: test_inject_reply.py  test_send.py  test_subscribe.py
