[tool.poetry]
name = "AG1_AEtherBus"
version = "1.1.1"
description = "Redis-based async message bus for agent communication (envelope-based, reusable, production-ready)"
authors = ["Sean C. <sean@propensity.co.za>"]
license = "MIT"
keywords = ["redis", "asyncio", "message bus", "envelope", "agent", "python"]
homepage = "https://github.com/Agentic1/AEtherBusV1_1"
repository = "https://github.com/Agentic1/AEtherBusV1_1"
documentation = "https://github.com/Agentic1/AEtherBusV1_1#readme"
readme = "README.md"

packages = [
    { include = "AG1_AetherBus" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
redis = "5.2.1"
aiohttp = "3.9.1"  # Pinned version
python-dotenv = "1.0.0"
aiogram = "^3.20.0.post0"
aiohttp-cors = "^0.8.1"
websockets = "^15.0.1"
mcp = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pytest-asyncio = "^0.21.1"

[tool.poetry.scripts]
aetherbus = "AG1_AetherBus.cli:main"  # Example if you have a CLI